--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 
 task fatJar(type: Jar, dependsOn: jar) {
     from(configurations.compile.collect { zipTree(it).matching { include '**/*.class' } })
+    manifest { attributes 'Main-Class': 'cpw.mods.fml.installer.SimpleInstaller' }
 }
 
 fatJar.doFirst {
