--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.google.guava:guava:14.0'
     compile 'commons-io:commons-io:2.4'
     compile 'org.apache.commons:commons-lang3:3.1'
+    testCompile  'junit:junit:4.11'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
