--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ repositories {
 
 group = 'uk.thecodingbadgers'
 archivesBaseName = 'adminpack-installer'
-version = '1.6'
+version = '1.7-SNAPSHOT'
 targetCompatibility = '1.7'
 sourceCompatibility = '1.7'
 
