--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,6 @@ buildscript {
 
 repositories {
     mavenCentral()
-    mavenLocal()
     maven {
         url "http://s3.amazonaws.com/Minecraft.Download/libraries"
         url "http://repository-codingbadgers.forge.cloudbees.com/snapshot/"
@@ -27,7 +26,7 @@ repositories {
 
 group = 'uk.thecodingbadgers'
 archivesBaseName = 'adminpack-installer'
-version = '1.7-SNAPSHOT'
+version = '1.7'
 targetCompatibility = '1.7'
 sourceCompatibility = '1.7'
 
