--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ repositories {
 
 group = 'uk.thecodingbadgers'
 archivesBaseName = 'adminpack-installer'
-version = '1.8.1'
+version = '1.8.2-SNAPSHOT'
 targetCompatibility = '1.7'
 sourceCompatibility = '1.7'
 
