--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,11 @@ sourceCompatibility = '1.7'
 dependencies {
     compile 'net.sf.jopt-simple:jopt-simple:4.5'
     compile 'net.sourceforge.argo:argo:3.7'
-    compile 'com.google.guava:guava:14.0'
+    compile 'com.google.guava:guava:16.0.1'
     compile 'commons-io:commons-io:2.4'
     compile 'org.apache.commons:commons-lang3:3.1'
     compile 'io.github.thefishlive:bootstrap:1.0.1'
+    compile 'org.tukaani:xz:1.3'
     testCompile  'junit:junit:4.11'
 }
 
